updated upload photo option

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
             <label for="phone">Contact No:</label>
             <input type="tel" id="phone" placeholder="Enter your phone no" required>
+
+            <!-- Adding Profile Picture -->
+             <label for="profilepicture">Profile Picture</label>
+             <input type="file" id="profilepicture" name="profilepicture" accept="image/*" required>
         </fieldset>
 
         <fieldset>
